<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="25dp"
    tools:context=".EditRunningRecordActivity">

    <Button
        android:id="@+id/button_current_data"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/use_current_data_and_time" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_text_time">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="time" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_text_date">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_submit" />
</LinearLayout>